--- a/Assets/sass/view/_all.scss
+++ b/Assets/sass/view/_all.scss
@@ -3,11 +3,11 @@
 *     ####         #                               #          *
 *       ##  #####  ######  #     # ####### ####### #  #####   * @Author: revers
 *       ## #     # #     # #     #      #       #  # #     #  *
-*       ## #     # #     # #     #     #       #   # #     #  * @Date:   2015-10-18 10:35:37
+*       ## #     # #     # #     #     #       #   # #     #  * @Date:   2015-11-08 02:51:32
 *       ## #     # #     # #     #    #       #    # #     #  *
 *       ## #     # #     # #     #   #       #     # ######   * @Last Modified by:   revers
 *  ####### #     # #     # #     #  #       #      # #        *
-*  ######   #####   ######  #####  ####### ####### # #######  * @Last Modified time: 2015-11-08 02:51:44
+*  ######   #####   ######  #####  ####### ####### # #######  * @Last Modified time: 2015-11-08 02:51:37
 **************************************************************/
 
-@import "view/all";
+@import "view";
